# openalex-mcp-server

./: .gitignore  LICENSE  README.md
src/: test_mcp_client.py
src/openalex-mcp-server/: __init__.py  __main__.py  config.py  main.py  pyproject.toml  server.py
src/openalex-mcp-server/prompts/: __init__.py  agent_prompt_template.py  handlers.py  openalex_api_agent.py  prompt_manager.py  prompts.py
src/openalex-mcp-server/resources/: __init__.py  biorxiv_papers.py
src/openalex-mcp-server/tools/: __init__.py
