[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openalex-mcp-server"
version = "0.1.0"
description = "OpenAlex MCP Server implementation by ResearchHub Foundation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp==3.9.1",
    "httpx>=0.28.1",
    "mcp[cli]>=1.6.0",
    "pydantic>=2.11.2",
]

[tool.setuptools.packages.find]
where = ["."]